# Visovox

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile_api  Dockerfile_worker  LICENSE  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
configs/: default_config.yaml  linux_server_config.yaml  logging_config.yaml  model_manifest.json  windows_config.yaml
docs/: api_reference.md  architecture.md  ethical_guidelines.md  tests.md  user_guide_linux.md  user_guide_windows.md
docs/modules/: _template_module.md  apis_auth_router.md  apis_celery_tasks.md  apis_dependencies.md  apis_facial_processing_router.md  apis_i18n.md  apis_jwt_handler.md  apis_live_stream_router.md  apis_live_ws_router.md  apis_locales.md  apis_main.md  apis_media_ingestion_router.md  apis_middlewares.md  apis_model_management_router.md  apis_multimodal_sync_router.md  apis_oauth2_scheme.md  apis_scene_analysis_router.md  apis_schemas.md  apis_user_models.md  apis_utils.md  apis_visual_generation_router.md  apis_voice_processing_router.md  facial_processing.md  live_stream.md  media_ingestion.md  model_management.md  multimodal_sync.md  scene_analysis.md  (+2 more)
frontend_example/: README.md
scripts/: build_docker.sh  convert_to_onnx.py  download_models.py  gen_release_notes.py  generate_module_docs.py  package_windows.sh  run_all_tests.bat  run_all_tests.sh  run_api_server.sh  run_desktop_app.py  run_scene_analysis_tests.bat  run_tests.sh  setup_linux.sh  setup_local.sh  setup_windows.bat  validate_infra.bat  validate_infra.sh
(+82 files in other folders)
