# pyproject.toml para gerenciamento de dependências e build do projeto VisioVox Fusion
# (Preencha com [tool.poetry], [build-system], etc.) 

[tool.poetry]
name = "visiovox-fusion"
version = "0.1.0"
description = "API multimodal VisioVox Fusion"
authors = ["Seu Nome <email@dominio.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
celery = "^5.3"
redis = "^5.0"
pydantic = "^2.0"
python-multipart = "^0.0.6"
requests = "^2.31"
pillow = "^10.0"
librosa = "^0.10"
pyyaml = "^6.0"
torch = "^2.2.0"
# Adicione PyTorch, soundfile, etc. conforme necessário

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
pytest-mock = "^3.14"
black = "^24.0"
isort = "^5.13"
flake8 = "^7.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 